# chatProject

./: .gitignore  CMakeLists.txt
client/: GUI_Initialization.c  GUI_Initialization.h  appMenu.c  appMenu.h  chat.c  chat.h  clientCommand.c  clientCommand.h  definitions.h  friends.c  friends.h  generalFunctions.c  generalFunctions.h  login.c  login.h  main.c  messages.c  messages.h
client/ServerHandler/: clientCommands.c  clientCommands.h  requestHandler.c  requestHandler.h  serverConnection.c  serverConnection.h  serverLoop.c  serverLoop.h
server/: definitions.h  main.c  sqlite.c  sqlite.h
shared/: definitions.h
